infrastructure/gateway/overlays/workload-prd/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: main-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  addresses:
    - type: IPAddress
      value: "10.0.4.50"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-longhorn
      port: 443
      protocol: HTTPS
      hostname: "longhorn.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "longhorn-system"
    - name: https-kyverno-reporter
      port: 443
      protocol: HTTPS
      hostname: "kyverno-reporter.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: kyverno-reporter-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "kyverno-reporter"
    - name: https-hubble
      port: 443
      protocol: HTTPS
      hostname: "hubble.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: hubble-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "kube-system"
    - name: https-flux
      port: 443
      protocol: HTTPS
      hostname: "flux.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: flux-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "flux-system"
    - name: https-goldilocks
      port: 443
      protocol: HTTPS
      hostname: "goldilocks.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: goldilocks-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "vpa"
    - name: https-httpbin
      port: 443
      protocol: HTTPS
      hostname: "httpbin.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: httpbin-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "httpbin"
    - name: https-whoami
      port: 443
      protocol: HTTPS
      hostname: "whoami.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: whoami-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "whoami"
    - name: https-uptime-kuma
      port: 443
      protocol: HTTPS
      hostname: "uptime.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: uptime-kuma-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "uptime-kuma"
    - name: https-alloy
      port: 443
      protocol: HTTPS
      hostname: "alloy.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: alloy-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "k8s-monitoring"
    - name: https-grafana
      port: 443
      protocol: HTTPS
      hostname: "grafana.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "grafana"
